<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:orientation="vertical">    <androidx.cardview.widget.CardView        xmlns:app="http://schemas.android.com/apk/res-auto"        xmlns:tools="http://schemas.android.com/tools"        android:layout_width="match_parent"        android:layout_height="175dp"        android:backgroundTint="@color/background_card"        app:cardCornerRadius="10dp">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:orientation="horizontal">            <ImageView                android:id="@+id/main_avatar"                android:layout_width="175dp"                android:layout_height="175dp"                android:contentDescription="@string/person_avatar"                android:src="@drawable/ic_launcher_background"                android:visibility="visible"                app:layout_constraintBottom_toBottomOf="parent"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintHorizontal_bias="0.0"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toTopOf="parent"                app:layout_constraintVertical_bias="1.0"                tools:ignore="MissingConstraints" />            <LinearLayout                android:layout_width="0dp"                android:layout_height="match_parent"                android:layout_margin="12dp"                android:layout_weight="1"                android:divider="@drawable/empty_tall_divider"                android:orientation="vertical"                android:showDividers="middle">                <LinearLayout                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:orientation="vertical">                    <TextView                        android:id="@+id/tv_name"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:fontFamily="@font/fredoka_one_regular"                        android:text="@string/rick_sanchez"                        android:textColor="@color/white"                        android:textSize="19sp" />                    <LinearLayout                        android:layout_width="match_parent"                        android:layout_height="wrap_content">                        <androidx.cardview.widget.CardView                            android:id="@+id/iv_status"                            android:layout_width="8dp"                            android:layout_height="8dp"                            app:cardCornerRadius="100dp"                            android:layout_gravity="center_vertical"                            android:layout_marginEnd="8dp" />                        <TextView                            android:id="@+id/tv_status"                            android:layout_width="match_parent"                            android:layout_height="wrap_content"                            android:text="Alive-Human"                            android:textColor="@color/white"                            android:textSize="13sp" />                    </LinearLayout>                </LinearLayout>                <LinearLayout                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:orientation="vertical">                    <TextView                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:text="@string/last_known_location_title"                        android:textColor="@color/title_text_color"                        android:textSize="13sp"                        android:textStyle="bold" />                    <TextView                        android:id="@+id/tv_location_name"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:text="Citadel of Ricks"                        android:textColor="@color/white"                        android:textSize="13sp" />                </LinearLayout>                <LinearLayout                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:orientation="vertical">                    <TextView                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:text="@string/origin_title"                        android:textColor="@color/title_text_color"                        android:textSize="13sp"                        android:textStyle="bold" />                    <TextView                        android:id="@+id/tv_origin_name"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:text="Earth (C-137)"                        android:textColor="@color/white"                        android:textSize="13sp" />                </LinearLayout>            </LinearLayout>        </LinearLayout>    </androidx.cardview.widget.CardView>    <View        android:background="@color/title_text_color"        android:layout_width="match_parent"        android:layout_marginBottom="6dp"        android:layout_marginTop="6dp"        android:layout_height="2dp"/></LinearLayout>